v1.5
New methods:
-- Added Koala::Utils.logger to enable debugging (thanks, KentonWhite!)
Updated methods:
-- GraphCollection.parse_page_url now uses the URI library and can parse any address (thanks, bnorton!)
Internal improvements:
-- Update MultiJson dependency to 1.2.0, which supports the Oj library (thanks, zinenko!)
-- Fixed typos (thanks, nathanbertram!)
-- Cleaned up gemspec

v1.4
New methods:
-- OAuth#exchange_access_token(_info) allows you to extend access tokens you receive (thanks, etiennebarrie!)
Updated methods:
-- HTTPServices#encode_params sorts parameters to aid in URL comparison (thanks, sholden!)
-- get_connections is now aliased as get_connection (use whichever makes sense to you)
Internal improvements:
-- Fixed typos (thanks, brycethornton and jpemberthy!)
-- RealtimeUpdates will no longer execute challenge block unnecessarily (thanks, iainbeeston!)
Testing improvements:
-- Added parallel_tests to development gem file
-- Fixed failing live tests
-- Koala now tests against JRuby and Rubinius in 1.9 mode on Travis-CI

v1.3
New methods:
-- OAuth#url_for_dialog creates URLs for Facebook dialog pages
-- API#set_app_restrictions handles JSON-encoding app restrictions
-- GraphCollection.parse_page_url now exposes useful functionality for non-Rails apps
-- RealtimeUpdates#subscription_path and TestUsers#test_user_accounts_path are now public
Updated methods:
-- REST API methods are now deprecated (see http://developers.facebook.com/blog/post/616/)
-- OAuth#url_for_access_token and #url_for_oauth_code now include any provided options as URL parameters
-- APIError#raw_response allows access to the raw error response received from Facebook
-- Utils.deprecate only prints each message once (no more spamming)
-- API#get_page_access_token now accepts additional arguments and HTTP options (like other calls)
-- TestUsers and RealtimeUpdates methods now take http_options arguments